--- a/CSS/style.css
+++ b/CSS/style.css
@@ -368,6 +368,78 @@
     }
 }
 
+@layer about {
+    #education {
+        padding: 50px 15px 20px 15px;
+        border-bottom: 1px solid #dcd9d9;
+        text-align: center
+    }
+    
+    #education h2 {
+        color: #374054;
+        margin-bottom: 50px
+    }
+    
+    .education-block {
+        max-width: 700px;
+        margin: 0 auto 30px auto;
+        padding: 15px;
+        border: 1px solid #dcd9d9;
+        text-align: left
+    }
+    
+    .education-block h3 {
+        font-weight: 500;
+        float: left;
+        margin: 0;
+        color: #374054
+    }
+    
+    .education-block span {
+        color: #74808a;
+        float: right
+    }
+    
+    .education-block h4 {
+        color: #74808a;
+        clear: both;
+        font-weight: 500;
+        margin: 0 0 15px 0
+    }
+    
+    .education-block p,
+    .education-block ul {
+        margin: 0;
+        color: #74808a;
+        font-size: 0.9em
+    }
+    
+    .education-block ul {
+        padding: 0 0 0 15px
+    }
+
+    @media (max-width: 400px) {
+        #education h2 {
+            font-size: var(--h3);
+        }
+        #education h3 {
+            font-size: var(--h5);
+        }
+        .education-date {
+            font-size: 0.8rem;
+        }
+        #education h4 {
+            font-size: var(--h6);
+        }
+        #education p {
+            font-size: 0.9rem;
+        }
+        #education ul li {
+            font-size: 0.9rem;
+        }
+    }
+}
+
 @layer Projects {
     .projects {
         background-color: white;
