--- a/CSS/style.css
+++ b/CSS/style.css
@@ -366,6 +366,14 @@
             fill: var(--tan);
         }
     }
+     @media (max-width: 370px) {
+        header h1{
+            font-size: var(--h5);
+        }
+        .Design {
+            font-size: 2rem;
+        }
+    }
 }
 
 @layer about {
